--- a/note.ipynb
+++ b/note.ipynb
@@ -73,7 +73,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# k = 0\n",
+    "\n",
+    "# def flip(x_log,thresh,X):\n",
+    "#     global k\n",
+    "#     xt = x_log[-2]\n",
+    "#     xt_1 = x_log[-1]\n",
+    "#     if xt_1 - xt > thresh:\n",
+    "#         k -= 1\n",
+    "#     elif xt - xt_1 > thresh:\n",
+    "#         k += 1\n",
+    "#     return xt_1 + k*X\n",
+    "\n",
+    "# array = []\n",
+    "# for i in range(10):\n",
+    "#     array.append(i%)"
+   ]
   }
  ],
  "metadata": {
