add: AVG time taken between sending of a command

--- a/note.ipynb
+++ b/note.ipynb
@@ -90,6 +90,32 @@
     "# for i in range(10):\n",
     "#     array.append(i%)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Note:\n",
+    "\n",
+    "- Plug right side in first, then left side with splitter\n",
+    "- The sole USB is the USB0\n",
+    "- The USB on the R side is USB1\n",
+    "- The USB on the A side is USB2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
