--- a/note.ipynb
+++ b/note.ipynb
@@ -105,17 +105,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "f = \"\"\"0.0165\n",
+    "0.0157\n",
+    "0.0161\n",
+    "0.0158\n",
+    "0.0161\n",
+    "0.0159\"\"\""
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.016016666666666665, 0.0002857738033247043)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import statistics as stat\n",
+    "l = [float(i) for i in f.split()]\n",
+    "stat.mean(l), stat.stdev(l)"
+   ]
   }
  ],
  "metadata": {
